src/Components/SkillsTools/Skills.scss
.chbi-skills-container {
  .chbi-skills-title {
    font-size: 1.5rem;
    color: 	#F4F5FA;
    margin-bottom: 8px;
  }

  .chbi-skills-paragraph, .chbi-languages {
    color: 	#F4F5FA;
    font-size: 1rem;
  }

  .chbi-skills-card-container-flex {
    display: flex;
    flex-flow: wrap;
    justify-content: center;
    gap: 24px;
  }
}

@media screen and (min-width: 768px) {
  .chbi-skills-container {
  .chbi-skills-title {
    font-size: 1.75rem;
    color: #F4F5FA;
    margin-bottom: 8px;
  }

  .chbi-skills-paragraph, .chbi-languages {
    color: 	#F4F5FA;
    font-size: 2rem;
  }
}
}

